<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2013. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  ~ Morbi non lorem porttitor neque feugiat blandit. Ut vitae ipsum eget quam lacinia accumsan.
  ~ Etiam sed turpis ac ipsum condimentum fringilla. Maecenas magna.
  ~ Proin dapibus sapien vel ante. Aliquam erat volutpat. Pellentesque sagittis ligula eget metus.
  ~ Vestibulum commodo. Ut rhoncus gravida arcu.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/intetface">
        <ListPreference
                android:defaultValue="1"
                android:entries="@array/language_arr"
                android:entryValues="@array/language_arr_value"
                android:key="language"
                android:summary="@string/language_summary"
                android:title="@string/language">
        </ListPreference>
    </PreferenceCategory>
      <PreferenceCategory android:title="@string/management">
        <CheckBoxPreference
                android:defaultValue="true"
                android:key="analytics"
                android:summary="@string/analytics_summary"
                android:title="@string/analytics"/>
    </PreferenceCategory>

</PreferenceScreen>